--- a/content/weeks/05-prediction.Rmd
+++ b/content/weeks/05-prediction.Rmd
@@ -31,6 +31,7 @@ type: docs
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/VORnNGIbDrs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 - [Slides](/slides/04-prediction/02-regression-i.pdf)
+- [Data](/data/health.csv)
 
 ## Lecture Video 12: Least Squares for Linear Regression
 
