--- a/content/weeks/02-observational.Rmd
+++ b/content/weeks/02-observational.Rmd
@@ -23,22 +23,22 @@ type: docs
 
 - [Problem Set 1](/assignments/ps1-trains/) is due on Wednesday, 9/16 at 11:59pm ET. 
 
-## Video 1: Observational Studies
+## Lecture Video 3: Observational Studies
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rf9O1tFRGEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ### Materials
 
-- [Slides](/slides/02-causality/03-obs-studies.pdf)
+- [Slides](/slides/videos/03-obs-studies.pdf)
 
-## Topic 2: Descriptive Statistics
+## Lecture Video 4: Descriptive Statistics
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DH4w-Tj4A1Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### Materials
 
-- [Slides](/slides/03-measurement/01-descriptive-stats.pdf)
+- [Slides](/slides/videos/04-descriptive-stats.pdf)
 
 
 ## Live Meeting 
