--- a/content/weeks/08-probability.Rmd
+++ b/content/weeks/08-probability.Rmd
@@ -38,5 +38,6 @@ type: docs
 
 ## Lecture Video 21: Bayes' Rule
 
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3M-GOSnXiAw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-- [Slides]()
+- [Slides](/slides/videos/21-bayes.pdf)
