added week 11 lm

--- a/content/weeks/11-hypothesis-tests.Rmd
+++ b/content/weeks/11-hypothesis-tests.Rmd
@@ -39,3 +39,8 @@ type: docs
 
 - [Slides](/slides/videos/31-two-sample-test.pdf)
 
+## Live Meeting
+
+- Data: [`minwage.csv`](/data/transphobia_all.csv)
+- Tuesday slides with solutions: [Slides](/slides/week-11-slides.pdf)
+- [Zoom Recording](https://canvas.harvard.edu/courses/74805/external_tools/53531) (Go to "Cloud Recordings" Tab)
